--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,14 @@ serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 simple-error = "0.2"
 uuid = {version = "0.8", features = ["v4"]}
+#added for TLS support
+# ktls = "2.0.0"
+rcgen = "0.10.0"
+tokio-rustls = "0.23.4"
+rustls = { version = "0.20.7", features = ["secret_extraction"] }
+tokio = { version = "1.21.2", features = ["net", "macros", "io-util"] }
+
+
 
 #configuration for cargo-deb
 #install with "cargo install cargo-deb"
