--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,9 @@ uuid = {version = "0.8", features = ["v4"]}
 rustls = {version = "0.21.1", features = ["secret_extraction"]}
 rcgen = {version = "0.10.0", features = ["pem"]}
 rustls-pemfile = "1.0.2"
-tokio-rustls = "0.24.0"
+tokio-rustls = "0.23.4"
 tokio = { version = "1.28.1", features = ["net", "time"] }
-
+ktls = "2.0.0"
 
 
 #configuration for cargo-deb
