--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ rustls = {version = "0.21.1", features = ["secret_extraction"]}
 rcgen = {version = "0.10.0", features = ["pem"]}
 rustls-pemfile = "1.0.2"
 tokio-rustls = "0.23.4"
-tokio = { version = "1.28.1", features = ["net", "time"] }
+tokio = { version = "1.28.1", features = ["net", "time", "macros", "rt-multi-thread", "sync"] }
 ktls = "2.0.0"
 
 
