--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ rcgen = {version = "0.10.0", features = ["pem"]}
 rustls-pemfile = "1.0.2"
 tokio-rustls = "0.23.4"
 tokio = { version = "1.28.1", features = ["net", "time", "macros", "rt-multi-thread", "sync"] }
-ktls = "2.0.0"
+# ktls = "2.0.0"
 
 
 #configuration for cargo-deb
